<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray1"

    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/choose_job"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:background="@color/white"
        />


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_marginTop="10dp"
        >
        <RadioButton
            android:id="@+id/rb1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/employee"
            android:button="@drawable/rb_bg"
            />
        <RadioButton
            android:id="@+id/rb2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_marginTop="1dp"
            android:text="@string/supervisor"
            android:button="@drawable/rb_bg"

            />
        <RadioButton
            android:id="@+id/rb3"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_marginTop="1dp"
            android:text="@string/financial"
            android:button="@drawable/rb_bg"

            />
        <RadioButton
            android:id="@+id/rb4"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_marginTop="1dp"
            android:text="@string/head_manager"
            android:button="@drawable/rb_bg"

            />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/btn_select"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="35dp"
            android:background="@color/white"
            android:textColor="@color/colorPrimary"
            android:textSize="17sp"
            android:text="@string/select"
            android:layout_marginEnd="1dp"

            android:layout_marginRight="1dp" />
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="35dp"
            android:background="@color/white"
            android:textColor="@color/gray4"
            android:textSize="17sp"
            android:text="@string/cancel"
            android:layout_marginStart="1dp"

            android:layout_marginLeft="1dp" />
    </LinearLayout>

</LinearLayout>