<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"

    >



    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/delete"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:background="@color/white"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20sp"
        android:layout_marginBottom="20sp"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/delete2"

        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/btn_delete"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="45dp"
            android:background="@color/white"
            android:textColor="@color/delete"
            android:textSize="15sp"
            android:text="@string/delete"
            android:layout_marginEnd="1dp"

            android:layout_marginRight="1dp" />
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="45dp"
            android:background="@color/white"
            android:textColor="@color/gray4"
            android:textSize="15sp"
            android:text="@string/cancel"
            android:layout_marginStart="1dp"

            android:layout_marginLeft="1dp" />
    </LinearLayout>

</LinearLayout>