<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/gray1"

    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:contentInsetStart="0dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorPrimary"
        >

        <ImageView
            android:id="@+id/image_back"
            android:layout_width="50dp"
            android:layout_height="45dp"
            android:clickable="false"
            android:longClickable="false"
            android:padding="13dp"
            android:src="@drawable/ic_arrow"
            android:tint="@color/white"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/contact_us"
            android:textColor="@color/white"
            android:textSize="16sp"

            />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/name"
                android:textColor="@color/black"
                android:layout_marginTop="30dp"
                android:textSize="15sp"

                />

            <EditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:background="@drawable/edt_bg"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:singleLine="true"


                />

            <TextView
                android:id="@+id/contact_us_txt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="15sp"

                />

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/edt_bg"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/contact_us_txt_email"
                android:textSize="14sp"
                android:singleLine="true"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                />

            <TextView
                android:id="@+id/contact_us_txt_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/subject"
                android:textColor="@color/black"
                android:textSize="15sp"

                />

            <EditText
                android:id="@+id/edt_msg"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/edt_bg"
                android:gravity="top"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:inputType="textMultiLine"
                android:padding="15dp"
                />

            <Button
                android:id="@+id/btn_send"
                android:layout_width="200dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginTop="45dp"
                android:background="@drawable/btn_send"
                android:gravity="center"
                android:text="@string/send"
                android:textColor="@android:color/white"
                android:textSize="15sp"


                />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>