<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/gray1"

    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:contentInsetStart="0dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorPrimary"
        >

        <ImageView
            android:id="@+id/image_back"
            android:layout_width="50dp"
            android:layout_height="45dp"
            android:clickable="false"
            android:longClickable="false"
            android:padding="13dp"
            android:src="@drawable/ic_arrow"
            android:tint="@color/white"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/order_details"
            android:textColor="@color/white"
            android:textSize="16sp"

            />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolBar"
        app:layout_constraintBottom_toTopOf="@id/ll"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/name"
                android:textColor="@color/black"
                android:layout_marginTop="30dp"
                android:textSize="15sp"
                android:gravity="center_vertical"

                />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:singleLine="true"
                android:background="@drawable/edt_bg"
                android:minHeight="40dp"
                android:gravity="center_vertical"



                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/address"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:textSize="15sp"

                />

            <TextView
                android:id="@+id/tv_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:background="@drawable/edt_bg"
                android:minHeight="40dp"

                />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                >
                <fragment
                    android:id="@+id/map"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    />

            </FrameLayout>



        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/tv_order_state"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/order_pend"
            android:gravity="center"
            android:visibility="gone"
            />
        <Button
            android:id="@+id/btn_accept"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/accept_order"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textAllCaps="false"
            android:visibility="gone"



            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>