<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    android:focusable="true"
    android:background="@drawable/bg2">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="90dp"
        android:layout_height="90dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="60dp"
        android:src="@drawable/logo"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias=".4"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            >
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_user"
                android:tint="@color/yellow"
                android:padding="8dp"
                android:layout_gravity="center_vertical"
                />
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/gray3"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>
            <EditText
                android:id="@+id/edt_user_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:background="@color/white"
                android:singleLine="true"
                android:textColorHint="@color/gray4"
                android:hint="@string/username"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginTop="1dp"
            >
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_lock"
                android:tint="@color/yellow"
                android:padding="8dp"
                android:layout_gravity="center_vertical"
                />
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/gray3"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="false"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/yellow"
                >
                <EditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:background="@color/white"
                    android:singleLine="true"
                    android:textColorHint="@color/gray4"
                    android:hint="@string/password"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:inputType="textPassword"

                    />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:weightSum="1"
            >
            <Button
                android:id="@+id/btn_sign_in"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight=".5"
                android:background="@color/yellow"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:text="@string/sign_in"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp" />
            <Button
                android:id="@+id/btn_sign_up"

                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight=".5"
                android:background="@color/white"
                android:textColor="@color/yellow"
                android:textSize="17sp"
                android:text="@string/sign_up"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:text="@string/skip"
            android:textStyle="bold"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>